--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,8 +8,11 @@ authors = [
 ]
 requires-python = ">=3.13"
 dependencies = [
-    "pfcschemas>=0.1.10",
     "pydantic>=2.9.2",
+    "pfcschemas>=0.1.10",
+    "pfc-geometry",
+    "flightdata",
+    "flightanalysis"
 ]
 
 [build-system]
