--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "pyolan"
 version = "0.1.0"
-description = "Add your description here"
+description = "One Letter Aerobatic Notation Parser"
 readme = "README.md"
 authors = [
     { name = "Thomas David", email = "thomasdavid0@gmail.com" }
@@ -14,6 +14,7 @@ dependencies = [
     "flightdata",
     "flightanalysis"
 ]
+
 
 [build-system]
 requires = ["hatchling"]
